# AI_Advent_Challenge

./: .cursorignore  .cursorrules  .dockerignore  .editorconfig  .env.example  .gitattributes  .github-env  .gitignore  .importlinter  .pre-commit-config.yaml  AGENTS.md  AGENTS.ru.md  AGENTS_QUICK_REFERENCE.md  AGENTS_QUICK_REFERENCE.ru.md  AI_CONTEXT.md  CHANGELOG.md  CONTRIBUTING.md  DEBUG_ISSUES.md  Dockerfile  Dockerfile.bot  Dockerfile.dev  Dockerfile.mcp  Dockerfile.test-agent  Dockerfile.worker  EPIC_21_ANALYST_FINAL_REPORT.md  LAUNCH_STATUS.md  LICENSE  Makefile  Makefile.template  QUICK_START.md  QUICK_TEST.md  README.DOCKER.md  README.HOTRELOAD.md  README.md  README.ru.md  README.ru.md.new  README_HOMEWORK_REVIEW.md  SETUP.md  TESTING_SUMMARY.md  TEST_AGENT_GUIDE.md  (+18 more)
archive/legacy/day_07/: .env.example  .gitignore  constants.py  docker-compose.traefik.yml  main.py  pyproject.toml  setup_chadgpt.sh
archive/legacy/day_07/.cursor/: context.md  examples.md  prompts.md  rules.md
day_01/: Makefile  README.md  config.py  pyproject.toml
day_03/: Makefile  README.md  TASK.md  advice_mode.py  advice_session.py  pyproject.toml
day_03/tests/: test_advice_session.py
day_06/: Makefile  README.md  demo.py  model_test_report_20251022_211929.md  model_test_report_20251022_213339.md  model_test_report_20251022_214152.md  model_test_report_20251022_225001.md  model_test_report_20251022_225806.md  model_test_report_20251022_225859.md  model_test_report_20251022_230039.md  pyproject.toml
day_06/src/: __init__.py  base_client.py  constants.py  main.py  model_client.py  report_generator.py  riddles.py
day_06/tests/: __init__.py  test_main.py  test_model_client.py  test_property_based.py  test_report_generator.py  test_riddles.py
day_08/: .env.example  .pre-commit-config.yaml  CHANGELOG.md  DOCUMENTATION_INDEX.md  Dockerfile  ENHANCED_DEMO_REPORTING_SUMMARY.md  FINAL_METRICS_REPORT.md  MIGRATION_GUIDE.md  Makefile  README.md  README.ru.md  ZEN_TODO_REPORT.md  api.md  architecture.md  compare_models.py  config.example  demo.py  demo_enhanced.py  demo_model_switching.py  demo_quick.py  demo_working.py  env.example  main.py  main_enhanced.py  pyproject.toml  run.py  test_connection.py  token_service.py
day_08/agents/: __init__.py  code_generator_adapter.py  code_reviewer_adapter.py
day_08/api/: __init__.py
day_08/api/handlers/: token_handler.py
day_08/config/: __init__.py  demo_config.py  loader.py  settings.py
day_08/core/: accurate_token_counter.py  compression_evaluator.py  container.py  experiments.py  experiments_zen.py  ml_client.py  ml_client_zen.py  model_switcher.py  quality_analyzer.py  text_compressor.py  token_analyzer.py  token_analyzer_refactored.py  token_analyzer_zen.py
day_08/core/bootstrap/: __init__.py  application_bootstrapper.py
day_08/core/builders/: experiment_builder.py
day_08/core/compressors/: __init__.py  base.py  keywords.py  strategy.py  truncation.py
day_08/core/factories/: __init__.py  token_counter_factory.py
day_08/core/interfaces/: __init__.py  protocols.py
day_08/core/validators/: __init__.py  request_validator.py
day_08/docs/: MIGRATION_FROM_DAY07.md  ML_ENGINEERING.md
day_08/domain/: __init__.py
day_08/domain/entities/: __init__.py  token_analysis_entities.py
day_08/domain/repositories/: __init__.py  token_analysis_repositories.py
day_08/domain/services/: __init__.py  token_analysis_services.py
day_08/domain/value_objects/: __init__.py  token_analysis_values.py
day_08/examples/: domain_usage.py  ml_engineering.py  task_demonstration.py
day_08/ml/: __init__.py
day_08/ml/evaluation/: __init__.py  model_evaluator.py
day_08/ml/experiments/: experiment_tracker.py
day_08/ml/monitoring/: __init__.py  performance_monitor.py  performance_monitor_refactored.py
day_08/ml/registry/: model_registry.py
day_08/models/: application_context.py  data_models.py  experiment_models.py
day_08/services/: token_service.py
day_08/tests/: README.md  test_compressors.py  test_config.py  test_console_reporter_refactoring.py  test_di_container.py  test_docker_manager.py  test_experiments.py  test_main_refactoring.py  test_ml_client.py  test_model_switching_demo.py  test_protocols.py  test_text_compressor.py  test_token_analyzer.py  test_token_counter_factory.py  test_token_service_refactoring.py  test_utils.py
day_08/tests/integration/: __init__.py  test_integration.py
day_08/tests/mocks/: __init__.py  mock_config.py
day_08/tests/performance/: test_performance_baseline.py
day_08/tests/property/: __init__.py  test_compressor_properties.py  test_statistics_properties.py  test_token_analyzer_properties.py
day_08/tests/regression/: test_baseline_behavior.py
day_08/tools/: solid_audit.py
day_08/utils/: __init__.py  console_formatter.py  console_reporter.py  demo_report_generator.py  docker_manager.py  formatters.py  logging.py  report_generator.py  retry.py  statistics.py  statistics_collector.py
docs/: API.md  (+62 more)
shared/: .flake8  MIGRATION_GUIDE.md  README.md  coverage.json  pyproject.toml
shared/clients/: unified_client.py
shared/config/: api_keys.py
shared/shared_package/: __init__.py
shared/shared_package/agents/: __init__.py  base_agent.py  code_generator.py  code_reviewer.py  schemas.py
shared/shared_package/clients/: __init__.py  base_client.py  unified_client.py
shared/shared_package/config/: __init__.py  agents.py  api_keys.py  constants.py  models.py
shared/shared_package/exceptions/: __init__.py  model_errors.py
shared/shared_package/orchestration/: __init__.py  adapters.py  base_orchestrator.py  parallel.py  sequential.py
shared/shared_package/utils/: __init__.py
shared/shared_package/validation/: models.py
shared/tests/: __init__.py  test_adapters_simple.py  test_agent_config.py  test_agents.py  test_api_keys.py  test_code_reviewer_agent.py  test_exceptions.py  test_external_apis.py  test_models.py  test_orchestration_adapters.py  test_orchestration_integration.py  test_orchestration_patterns.py  test_unified_client.py  test_validation.py
shared/validation/: __init__.py  models.py
(+3029 files in other folders)
