[tool.poetry]
name = "ded-ai-chat"
version = "1.0.0"
description = "Чат с ехидным AI-дедушкой"
authors = ["Andrei Zhukov <andrei@beetles.family>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
httpx = "^0.27.0"

[tool.poetry.group.dev.dependencies]

[tool.poetry.scripts]
ded = "python terminal_chat.py"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
