[tool.poetry]
name = "ded-chat-v3"
version = "3.0.0"
description = "Терминальный чат с ехидным AI-дедушкой v3.0 - режим советчика"
authors = ["AI Advent Challenge <challenge@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.8"
httpx = "^0.27.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
pytest-asyncio = "^0.21.0"
pytest-cov = "^4.0.0"

[tool.poetry.scripts]
ded-chat-v3 = "terminal_chat_v3:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]